--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,14 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.2|^8.0|^8.3|^8.4",
-        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0|^12.0"
+        "php": "^7.2|^8.0|^8.3",
+        "illuminate/support": "^10.0|^11.0|^12.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10",
-        "php-coveralls/php-coveralls": "^2.6.0",
-        "mockery/mockery": ">1.2",
-        "orchestra/testbench": ">4.0"
+        "phpunit/phpunit": "^11",
+        "php-coveralls/php-coveralls": "^2.7",
+        "mockery/mockery": ">1.6",
+        "orchestra/testbench": ">9.13"
     },
     "autoload": {
         "classmap": [
