--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kingflamez/laravelrave",
+    "name": "doubleprincez/laravelrave",
     "description": "A Laravel Package for Flutterwave Rave",
     "keywords": [
         "php",
